--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rm -rf lib && tsc",
     "db:migrate": "npx squid-typeorm-migration apply",
     "processor:start": "node lib/processor.js",
-    "query-node:start": "squid-graphql-server"
+    "query-node:start": "squid-graphql-server",
+    "postinstall": "make codegen && make typegen"
   },
   "dependencies": {
     "@polkadot/util-crypto": "^10.1.4",
@@ -28,6 +29,7 @@
     "@subsquid/substrate-typegen": "1.2.1",
     "@subsquid/typeorm-codegen": "0.1.0",
     "@types/node": "16.11.47",
+    "@types/node-fetch": "^2.6.2",
     "typescript": "4.7.4"
   }
 }
