--- a/package.json
+++ b/package.json
@@ -12,24 +12,23 @@
     "postinstall": "make codegen && make typegen"
   },
   "dependencies": {
-    "@polkadot/util-crypto": "^10.1.4",
-    "@subsquid/archive-registry": "1.0.9",
-    "@subsquid/cli": "^0.6.0",
-    "@subsquid/graphql-server": "^1.1.0",
-    "@subsquid/ss58": "^0.1.1",
-    "@subsquid/substrate-processor": "1.5.1",
-    "@subsquid/typeorm-migration": "0.1.1",
-    "@subsquid/typeorm-store": "0.1.1",
+    "@subsquid/archive-registry": "1.0.14",
+    "@subsquid/graphql-server": "3.2.0",
+    "@subsquid/ss58": "0.1.2",
+    "@subsquid/substrate-processor": "1.9.1",
+    "@subsquid/typeorm-migration": "0.1.2",
+    "@subsquid/typeorm-store": "0.1.4",
     "dotenv": "^10.0.0",
-    "pg": "^8.7.3",
-    "typeorm": "0.3.7"
+    "pg": "8.8.0",
+    "typeorm": "0.3.9",
+    "@polkadot/util-crypto": "^10.1.4"
   },
   "devDependencies": {
-    "@subsquid/substrate-metadata-explorer": "1.0.5",
-    "@subsquid/substrate-typegen": "1.2.1",
-    "@subsquid/typeorm-codegen": "0.1.0",
-    "@types/node": "16.11.47",
-    "@types/node-fetch": "^2.6.2",
-    "typescript": "4.7.4"
+    "@subsquid/typeorm-codegen": "0.2.1",
+    "@subsquid/substrate-metadata-explorer": "1.0.6",
+    "@subsquid/substrate-typegen": "1.3.0",
+    "@types/node": "16.11.56",
+    "typescript": "4.8.2",
+    "@types/node-fetch": "^2.6.2"
   }
 }
